# ChangeLog for sys-libs/talloc
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/talloc/ChangeLog,v 1.15 2010/05/19 17:04:09 jer Exp $

  19 May 2010; Jeroen Roovers <jer@gentoo.org> talloc-2.0.1-r1.ebuild:
  Stable for HPPA (bug #300158).

  18 May 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  talloc-2.0.1-r1.ebuild:
  x86 stable wrt bug #300158

  03 May 2010; Olivier Crête <tester@gentoo.org> ChangeLog:
  amd64 stable, bug #300158

*talloc-2.0.1-r1 (03 Apr 2010)

  03 Apr 2010; Tiziano Müller <dev-zero@gentoo.org>
  +talloc-2.0.1-r1.ebuild, metadata.xml:
  Fixed: unnecessary inherit, swig dependency, documentation install,
  static-libs building.

*talloc-2.0.1 (26 Jan 2010)

  26 Jan 2010; Patrick Lauer <patrick@gentoo.org> +talloc-2.0.1.ebuild:
  Bump

  06 Dec 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  talloc-2.0.0-r1.ebuild:
  Block older samba (to force uninstall).

  30 Nov 2009; Raúl Porcel <armin76@gentoo.org> talloc-2.0.0-r1.ebuild:
  Add ~arm/~ia64/~s390/~sh/~sparc wrt #285952

  29 Nov 2009; Tobias Klausmann <klausman@gentoo.org>
  talloc-2.0.0-r1.ebuild:
  Keyworded on alpha, bug #285952

  08 Nov 2009; Joseph Jezak <josejx@gentoo.org> talloc-2.0.0-r1.ebuild:
  Marked ~ppc for bug #285952.

  04 Nov 2009; Patrick Lauer <patrick@gentoo.org> talloc-1.3.0.ebuild,
  talloc-1.3.1.ebuild, talloc-2.0.0.ebuild, talloc-2.0.0-r1.ebuild:
  Small dep fix

  23 Oct 2009; Patrick Lauer <patrick@gentoo.org> talloc-1.3.0.ebuild,
  talloc-1.3.1.ebuild:
  Fixing 1.3 ebuilds too

*talloc-2.0.0-r1 (23 Oct 2009)

  23 Oct 2009; Patrick Lauer <patrick@gentoo.org> +talloc-2.0.0-r1.ebuild,
  +files/talloc-2.0.0-without-doc.patch:
  Ebuild cleanups thanks to pva, bug #288536, making docs optional #290193,
  thanks to Andrew Church for the patch

  11 Oct 2009; Petteri Räty <betelgeuse@gentoo.org> talloc-2.0.0.ebuild:
  Block <net-fs/samba-libs-3.4 for bug #288545.
